# exoskeleton-control-system2

./: .gitignore  CLAUDE.md  generate_code_doc.py  generate_system_diagram_final.py  motor_final.py  motor_position_recorder.py  sdkconfig  外骨骼WiFi控制系统-使用说明.doc  外骨骼WiFi控制系统-源代码文档.doc  外骨骼WiFi控制系统-界面.doc  外骨骼WiFi控制系统-系统框图.doc
main/: CMakeLists.txt  alternating_speed.c  alternating_speed.h  button_detector.c  button_detector.h  continuous_torque_velocity_mode.c  continuous_torque_velocity_mode.h  main.c  motor_web_control.c  motor_web_control.h  motor_web_html.h  rs01_motor.c  rs01_motor.h  system_init.c  system_init.h  uart_motor_transmit.c  uart_motor_transmit.h  velocity_tracking_mode.c  velocity_tracking_mode.h  voice_module.c  voice_module.h  web_server.c  web_server.h  wifi_softap_module.c  wifi_softap_module.h
